Docker: experimental Java SE support for CPU and memory limits
Try running the container with '-v /sys/fs/cgroup/:/cgroup:ro' option.

See
https://blogs.oracle.com/java-platform-group/java-se-support-for-docker-cpu-and-memory-limits